tests/compile-fail/rule-missing-eq.stderr
error: missing rule body
 --> tests/compile-fail/rule-missing-eq.rs:3:5
  |
3 |     rule test()
  |     ^^^^
